# interview-mcp

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: sandbox.md  security.md  tools.md
problems/: 0001-pair-budget-match(2).json  0003-event-log-uniqueness-window(1).json
problems/example/: 0001-pair-budget-match(2).json  0002-bracketed-template-validator(1).json
scripts/: ci.sh  fix.sh
server/: llm_provider.py  main.py  tool_models.py  workspace.py
server/core/: mode.py
server/db/: base.py  models.py  repo.py  schemas.py  seed.py  types.py  write_types.py
server/eval/: judge.py
server/hints/: engine.py  followup_prompt.txt  jailbreak.py  system_prompt.txt
server/sandbox/: client.py  result_models.py  runner.py
tests/: test_get_progress.py  test_golden.py  test_hint_engine.py  test_jailbreak.py  test_judge.py  test_llm_provider.py  test_mode.py  test_piston_client.py  test_repo.py  test_run_tests.py  test_runner.py  test_smoke.py  test_start_problem_modes.py  test_submit_solution.py  test_workspace.py
tests/fixtures/golden/: 0001-pair-budget-depth1-empty.json  0001-pair-budget-depth1-near-solution.json  0001-pair-budget-depth2-stuck.json  0001-pair-budget-depth3-stuck.json  0002-brackets-depth1-empty.json  0002-brackets-depth2-counting-attempt.json  0002-brackets-depth3-stuck.json  0003-window-depth1-empty.json  0003-window-depth2-brute-force.json  0003-window-depth3-stuck.json
